--- a/Pages/Single movie Page.html
+++ b/Pages/Single movie Page.html
@@ -90,7 +90,7 @@
                 <h2>Browse Anime</h2>
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>-->
             </div>
-            <div class="container">
+            <!--<div class="container">
                 <div class="row align-items-start">
                     <div class="col">
                         <div class="movie-img-wrapper">
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             
         </section>
         
