--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/Clarissa.css">
 </head>
 <body class="homepage-body">
     <header class="homepage-header"> 
@@ -45,7 +45,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="watchlist.html" class="nav-link">
                                     <img src="../images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
                                     Watchlist
                                 </a>
