--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <ul class="nav">
                             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                             <li class="nav-item">
-                                <a href="movieslibrary.html" class="nav-link">Anime</a>
+                                <a href="/Pages/movieslibrary.html" class="nav-link">Anime</a>
                             </li>
                             <!-- Updated Anime Section with Dropdown -->
                             <li class="nav-item dropdown">
