--- a/Pages/watchlist.html
+++ b/Pages/watchlist.html
@@ -94,12 +94,12 @@
               <div class="row">
                 <div class="col text-center">
                   <div class="nav nav-pills justify-content-center" id="myList">
-                    <span class="nav-link" data-target="#carouselExample" data-slide-to="0">Watch List</span>
+                    <span class="nav-link" data-target="#carouselExample" data-slide-to="0">Watchlist</span>
                     <span class="nav-link" data-target="#carouselExample" data-slide-to="1">Nihon Lists</span>
                     <span class="nav-link" data-target="#carouselExample" data-slide-to="2">History</span>
                   </div>
                 </div>
-              </div>
+            </div>
 
 
             
@@ -133,12 +133,15 @@
                       <p>Here are lists you create!</p>
                     </div>
                   </div>
+
+
                   <div class="carousel-item">
                     <div class="d-flex justify-content-center">
                       <h3>History</h3>
                       <p>Your history of watched anime...</p>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
