--- a/Pages/SinglemoviePage.html
+++ b/Pages/SinglemoviePage.html
@@ -22,7 +22,7 @@
                         <ul class="nav">
 
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link">Home</a>
+                                <a href="/index.html" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">Anime</a></li>
                             
