--- a/Pages/index.html
+++ b/Pages/index.html
@@ -129,17 +129,15 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <a href="singleview.html?q=blue lock season 2">
-                            <div class="homepage-img-wrapper">
-                                <img src="../images/blue lock season 2.webp" class="img-fluid homepage-fixed-size" alt="Blue Lock Season 2">
-                                <div class="overlay">blue lock season 2</div>
-                            </div>
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/blue lock season 2.webp" class="img-fluid homepage-fixed-size" alt="Solo Leveling">
+                        </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="singleview.html?q=re zero starting life in another world">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/re zero starting life in another world.avif" class="img-fluid homepage-fixed-size" alt="Re:Zero - Starting Life in Another World">
-                                <div class="overlay">re zero starting life in another world</div>
                             </div>
                         </a>
                     </div>
@@ -147,7 +145,6 @@
                         <a href="singleview.html?q=shangri la frontier">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/shangri la frontier.avif" class="img-fluid homepage-fixed-size" alt="Shangri-La Frontier">
-                                <div class="overlay">shangri la frontier</div>
                             </div>
                         </a>
                     </div>
@@ -155,7 +152,6 @@
                         <a href="singleview.html?q=dan da dan">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/dan da dan.avif" class="img-fluid homepage-fixed-size" alt="Dan Da Dan">
-                                <div class="overlay">dan da dan</div>
                             </div>
                         </a>
                     </div>
@@ -166,15 +162,13 @@
                         <a href="singleview.html?q=fairy tail 100 years quest">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/fairy tail 100 years quest.avif" class="img-fluid homepage-fixed-size" alt="Fairy Tail: 100 Years Quest">
-                                <div class="overlay">fairy tail 100 years quest</div>
                             </div>
                         </a>
                     </div>
-                                  <div class="col">
+                    <div class="col">
                         <a href="singleview.html?q=trillion game">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/trillion game.avif" class="img-fluid homepage-fixed-size" alt="Trillion Game">
-                                <div class="overlay">trillion game</div>
                             </div>
                         </a>
                     </div>
@@ -182,7 +176,6 @@
                         <a href="singleview.html?q=mecha ude mechanical arms">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/mecha ude mechanical arms.avif" class="img-fluid homepage-fixed-size" alt="Mecha Ude Mechanical Arms">
-                                <div class="overlay">mecha ude mechanical arms</div>
                             </div>
                         </a>
                     </div>
@@ -191,10 +184,10 @@
                         <a href="singleview.html?q=the stories of girls who couldn't be magicians">
                             <div class="homepage-img-wrapper">
                                 <img src="../images/the stories of girls who couldn't be magicians.avif" class="img-fluid homepage-fixed-size" alt="The Stories of Girls Who Couldn't Be Magicians">
-                                <div class="overlay">the stories of girls who couldn't be magicians</div>
                             </div>
                         </a>
                     </div>
+
                 </div>
             </div>
         </section>
