singleview page Java and HTML

--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -22,7 +22,7 @@
                         <ul class="nav">
 
                             <li class="nav-item">
-                                <a href="/index.html" class="nav-link">Home</a>
+                                <a href="index.html" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">Anime</a></li>
                             
@@ -114,22 +114,26 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=sword art online">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/sword art online.avif" class="img-fluid movie-fixed-size" alt="Sword Art Online"></a>
+                                    <img src="../images/sword art online.avif" class="img-fluid movie-fixed-size" alt="Sword Art Online">
                                     <div class="popup-info">
                                         <h5>Sword Art Online</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=full metal alchemist">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/full metal alchemist.avif" class="img-fluid movie-fixed-size" alt="Full Metal Alchemist"></a>
+                                    <img src="../images/full metal alchemist.avif" class="img-fluid movie-fixed-size" alt="Full Metal Alchemist">
                                     <div class="popup-info">
                                         <h5>Full Metal Alchemist</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -157,22 +161,26 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=your lie in april">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/your lie in april.jpe" class="img-fluid movie-fixed-size" alt="Your Lie in April"></a>
+                                    <img src="../images/your lie in april.jpe" class="img-fluid movie-fixed-size" alt="Your Lie in April">
                                     <div class="popup-info">
                                         <h5>Your Lie in April</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=horimiya">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/horimiya.avif" class="img-fluid movie-fixed-size" alt="Horimiya"></a>
+                                    <img src="../images/horimiya.avif" class="img-fluid movie-fixed-size" alt="Horimiya">
                                     <div class="popup-info">
                                         <h5>Horimiya</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -213,22 +221,26 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=jujutsu kaisen">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/jujutsu kaisen.jpe" class="img-fluid movie-fixed-size" alt="Jujutsu Kaisen"></a>
+                                   <img src="../images/jujutsu kaisen.jpe" class="img-fluid movie-fixed-size" alt="Jujutsu Kaisen">
                                     <div class="popup-info">
                                         <h5>Jujutsu Kaisen</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=demon slayer">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/demon slayer.webp" class="img-fluid movie-fixed-size" alt="Demon Slayer"></a>
+                                    <img src="../images/demon slayer.webp" class="img-fluid movie-fixed-size" alt="Demon Slayer">
                                     <div class="popup-info">
                                         <h5>Demon Slayer</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -255,22 +267,26 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=solo leveling">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/solo leveling.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                    <img src="../images/solo leveling.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>Solo Leveling</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=undead unluck">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/undead unluck.webp" class="img-fluid movie-fixed-size" alt="Undead Unluck"></a>
+                                   <img src="../images/undead unluck.webp" class="img-fluid movie-fixed-size" alt="Undead Unluck">
                                     <div class="popup-info">
                                         <h5>Undead Unluck</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -312,22 +328,26 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=vinland saga">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/vinland saga.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                  <img src="../images/vinland saga.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>Vinland Saga</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=black lagoon">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/black lagoon.avif" class="img-fluid movie-fixed-size" alt="Undead Unluck"></a>
+                                  <img src="../images/black lagoon.avif" class="img-fluid movie-fixed-size" alt="Undead Unluck">
                                     <div class="popup-info">
                                         <h5>Black Lagoon</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -354,26 +374,30 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=kill la kill">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/kill la kill.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                    <img src="../images/kill la kill.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>/Kill La Kill</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=Akame ga kill">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/Akame ga kill.jpg" class="img-fluid movie-fixed-size" alt="Undead Unluck"></a>
+                                   <img src="../images/Akame ga kill.jpg" class="img-fluid movie-fixed-size" alt="Undead Unluck">
                                     <div class="popup-info">
                                         <h5>Akame Ga Kill</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/gurren lagann.avif" class="img-fluid movie-fixed-size" alt="Attack on Titan"></a>
+                                    <img src="../images/gurren lagann.avif" class="img-fluid movie-fixed-size" alt="Attack on Titan">
                                     <div class="popup-info">
                                         <h5>Gurren Lagann</h5>
                                         <button>Add to Watchlist</button>
@@ -412,22 +436,26 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
+                                    <a href="singleview.html?q=Made in abyss">
                                     <div class="movie-img-wrapper">
-                                        <a href="#"><img src="../images/Made in abyss.jpe" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                        <img src="../images/Made in abyss.jpe" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                         <div class="popup-info">
                                             <h5>Made In Abyss</h5>
                                             <button>Add to Watchlist</button>
                                         </div>
                                     </div>
+                                </a>
                                 </div>
                                 <div class="col">
+                                    <a href="singleview.html?q=hunter x hunter">
                                     <div class="movie-img-wrapper">
-                                        <a href="#"><img src="../images/hunter x hunter.avif" class="img-fluid movie-fixed-size" alt="Undead Unluck"></a>
+                                        <img src="../images/hunter x hunter.avif" class="img-fluid movie-fixed-size" alt="Undead Unluck">
                                         <div class="popup-info">
                                             <h5>Hunter x Hunter</h5>
                                             <button>Add to Watchlist</button>
                                         </div>
                                     </div>
+                                </a>
                                 </div>
                                 <div class="col">
                                     <div class="movie-img-wrapper">
@@ -454,22 +482,26 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=kill la kill">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/kill la kill.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                    <img src="../images/kill la kill.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>/Kill La Kill</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=magi the labyrinth of magic">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/Akame ga kill.jpg" class="img-fluid movie-fixed-size" alt="Undead Unluck"></a>
+                                  <img src="../images/Akame ga kill.jpg" class="img-fluid movie-fixed-size" alt="Undead Unluck">
                                     <div class="popup-info">
                                         <h5>Akame Ga Kill</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -512,22 +544,26 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=asobi asobase">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/log horizon.avif" class="img-fluid movie-fixed-size" alt="Fate"></a>
+                                    <img src="../images/log horizon.avif" class="img-fluid movie-fixed-size" alt="Fate">
                                     <div class="popup-info">
                                         <h5>log horizon</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=nichijou">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/asobi asobase.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                    <img src="../images/asobi asobase.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>asobi asobase</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
@@ -554,22 +590,26 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
+                                <a href="singleview.html?q=monthly girls nozaki kun">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/monthly girls nozaki kun.avif" class="img-fluid movie-fixed-size" alt="Fate"></a>
+                                    <img src="../images/monthly girls nozaki kun.avif" class="img-fluid movie-fixed-size" alt="Fate">
                                     <div class="popup-info">
                                         <h5>monthly girls nozaki kun</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
+                                <a href="singleview.html?q=gintama">
                                 <div class="movie-img-wrapper">
-                                    <a href="#"><img src="../images/gintama.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling"></a>
+                                   <img src="../images/gintama.avif" class="img-fluid movie-fixed-size" alt="Solo Leveling">
                                     <div class="popup-info">
                                         <h5>gintama</h5>
                                         <button>Add to Watchlist</button>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col">
                                 <div class="movie-img-wrapper">
