--- a/Pages/watchlist.html
+++ b/Pages/watchlist.html
@@ -22,7 +22,7 @@
                         <ul class="nav">
 
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link">Home</a>
+                                <a href="../index.html" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item"><a href="movieslibrary.html" class="nav-link">Anime</a></li>
                             
@@ -64,7 +64,7 @@
                             </li>                               
                         </ul>
                         <div class="login-download">
-                            <a href="#">Login</a> | <a href="#">Download Nihon.net</a>
+                            <a href="Pages/signup.html">Login</a> | <a href="#">Download Nihon.net</a>
                         </div>
                     </nav>
                 </div>
