--- a/Pages/singleview.html
+++ b/Pages/singleview.html
@@ -28,7 +28,7 @@
                         <ul class="nav">
 
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link">Home</a>
+                                <a href="../index.html" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item"><a href="movieslibrary.html" class="nav-link">Anime</a></li>
                             
@@ -52,7 +52,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="watchlist.html" class="nav-link">
                                     <img src="../images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
                                     Watchlist
                                 </a>
@@ -68,7 +68,7 @@
                             </li>                               
                         </ul>
                         <div class="login-download">
-                            <a href="#">Login</a> | <a href="#">Download Nihon.net</a>
+                            <a href="Pages/signup.html">Login</a> | <a href="#">Download Nihon.net</a>
                         </div>
                     </nav>
                 </div>
